[tool.poetry]
name = "webtronics"
version = "0.1.0"
description = ""
authors = ["Yerzhan Aitzhanov <y.aitzhanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
