[tool.poetry]
name = "webtronics"
version = "0.1.0"
description = ""
authors = ["Yerzhan Aitzhanov <y.aitzhanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
alembic = "^1.11.1"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.28.0"
pydantic = {version = "1.9.0", extras = ["email"]}
python-multipart = "^0.0.6"
SQLAlchemy = "1.4.49"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
